--- a/telefonkatalog.html
+++ b/telefonkatalog.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <ul>
-            <a href="index.html"><li>HEM</li></a>
-            <a href="telefonkatalog.html"><li>TELEFONKATALOG</li></a>
+            <li><a href="index.html">HEM</a></li>
+            <li><a href="telefonkatalog.html">KATALOG</a></li>
         </ul>
     </nav>
    <main>
